--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
+
+  width: 100%;
   font-weight: 400;
   height: 100%;
   color-scheme: light dark;
